bugfix: Contanct alignment

--- a/components/contact/style.module.css
+++ b/components/contact/style.module.css
@@ -17,6 +17,10 @@
 .contact-message-wrapper {
   display: block;
   margin-bottom: var(--margin-04);
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .contact-message {
